--- a/src/css/default.css
+++ b/src/css/default.css
@@ -4,9 +4,10 @@
 * ::after{box-sizing:border-box;}
 ul,ol{list-style: none; }
 a{color:inherit;text-decoration: none;}
+input{font:inherit;}
 
 body {
-    font-size: 12px;
+    font-size: 14px;
     line-height: 1.5;
 }
 
@@ -17,13 +18,13 @@ body {
 }
 .container > aside {
     width: 200px;
-    border: 1px solid red;
     display: flex;
     flex-direction: column;
 }
 .container > main {
     flex-grow: 1;
-    border: 1px solid green;
+    padding-left: 20px;
+    background: #ddd;
 }
 
 /* aside */
@@ -61,4 +62,43 @@ body {
     align-items: center;
     cursor: pointer;
 }
+
+/* main */
+main .form {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+main .form .row {
+    display: flex;
+    margin-top: 20px;
+}
+main .form .row input{
+    height: 32px;
+    padding: 0 8px;
+    border: 1px solid #ddd;
+    outline: none;
+    margin-left: 5px;
+    border-radius: 2px;
+}
+main .form .row span{
+    width: 4em;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+main .form .row.submit {
+    margin-left: calc(4em + 5px);
+} 
+main .form .row.submit button{
+    height: 32px;
+    padding: 0 15px;
+    background: #6d8fdc;
+    border: 1px solid #6d8fdc;
+    border-radius: 3px;
+}
+
 
