--- a/src/css/default.css
+++ b/src/css/default.css
@@ -35,10 +35,12 @@ body {
 .newSong.active {
     background: #d4d4d4;
 }
+.songList-container {
+    flex-grow: 1;
+}
 .songList {
     text-align: left;
     border-top: 1px solid #999;
-    flex-grow: 1;
 }
 .songList li {
     border-bottom: 1px solid #ddd;
