--- a/src/css/default.css
+++ b/src/css/default.css
@@ -2,7 +2,7 @@
 * {box-sizing: border-box;}
 * ::before{box-sizing: border-box;}
 * ::after{box-sizing:border-box;}
-ul,ol{list-style: none; }
+ul li,ol li{list-style: none; }
 a{color:inherit;text-decoration: none;}
 input{font:inherit;}
 
