finish index topBar

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -9,4 +9,11 @@ input{font:inherit;}
 body {
     font-size: 14px;
     line-height: 1.5;
+    height: 100vh;
+}
+.icon {
+    width: 1em; height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
 }
