--- a/src/css/index.css
+++ b/src/css/index.css
@@ -108,10 +108,11 @@
 /* tab-1 */
 .tabTitle {
     border-left: 2px solid #D43C33;
-    font-size: 17px;
+    font-size: 19px;
     line-height: 1;
     padding-left: 8px;
-    margin: 20px 0 8px;
+    margin: 12px 0 8px;
+    font-weight: normal;
 }
 .tab-1 .songSheetList{
     display: flex;
@@ -122,6 +123,9 @@
     width: 32.8%; 
     margin: 8px 0;
 }
+.tab-1 .songSheetList .songSheet .img img{
+    width: 100%;
+}
 .tab-1 .songSheetList .songSheet .img p{
     padding-left: 5px;
 }
@@ -131,10 +135,17 @@
 .tab-1 .newSongs .songList .song {
     margin-left: 10px;
     position: relative;
+    padding: 3px 0;
+    border-bottom: 1px solid #ddd;
 }
 .tab-1 .newSongs .songList .song h3{
-    font-size: 17px;
+    font-size: 19px;
+    color: #161414;
     font-weight: normal;
+}
+.tab-1 .newSongs .songList .song .singer{
+    color: #554d4d;
+    font-size: 15px;
 }
 .tab-1 .newSongs .songList .song .playButton {
     position: absolute;
