--- a/src/css/play-song.css
+++ b/src/css/play-song.css
@@ -3,7 +3,7 @@
     height: 100vh;
     position: relative;
 }
-.container::after {
+.container .cover{
     content: '';
     display: block;
     position: absolute;
@@ -11,7 +11,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: url('../img/xiaochou.jpg') no-repeat;
+    background-position: center;
     background-size: cover;
     z-index: -1;
     filter: blur(5px);
@@ -71,7 +71,7 @@
 }
 .disc-container .icon{
     position: absolute;
-    fill: #8c8787;
+    fill: #e9e0e0;
     width: 15%;
     height: 15%;
 }
